# pro-agent

./: .dockerignore  .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml
cognition/: fib.txt  pyproject.toml
cognition/cognition/: __init__.py  _genproto.py  approval.py  attachments.py  config.py
cognition/cognition/checkpoint/: __init__.py  postgres.py
cognition/cognition/events/: __init__.py  mapper.py  schema.py
cognition/cognition/graphs/: __init__.py  history.py  nodes.py  plan_execute.py  plan_lifecycle.py  react.py  state.py
cognition/cognition/mcp/: __init__.py  adapter.py  config.py  connection.py  naming.py  registry.py  serial.py
cognition/cognition/observability/: __init__.py  langfuse_seam.py  otel_seam.py
cognition/cognition/providers/: __init__.py  anthropic_provider.py  deepseek_provider.py  fake.py  reasoning.py  router.py
cognition/cognition/providers/image/: __init__.py  ark.py  base.py  fake.py  openai.py  wanx.py
cognition/cognition/providers/search/: __init__.py  baidu.py  base.py  bing.py  ddg.py  fake.py  tavily.py
cognition/cognition/rag/: __init__.py  chunking.py  citation.py  embeddings.py  expand.py  factory.py  fusion.py  graph.py  ingest.py  prompts.py  reflect.py  rerank.py  reranker.py  retriever.py  sparse.py  store.py  types.py
cognition/cognition/scripts/: __init__.py  ingest.py
cognition/cognition/server/: __init__.py  grpc_server.py  servicer.py
cognition/cognition/skills/: __init__.py  disclosure.py  frontmatter.py  registry.py  sandbox.py  tools.py
cognition/cognition/skills/runner/: __init__.py  base.py  docker.py  local.py  request.py  scratch.py  staging.py
cognition/cognition/sop/: __init__.py  store.py
cognition/cognition/tools/: __init__.py  calculator.py  code_interpreter.py  image_generate.py  knowledge_search.py  registry.py  report.py  web_fetch.py  web_search.py
cognition/examples/: sample_corpus.txt
cognition/examples/skills/word-count/: SKILL.md
cognition/examples/skills/word-count/references/: notes.md
cognition/examples/skills/word-count/scripts/: count.py
cognition/runtime/skills/chart-visualization/: SKILL.md
cognition/runtime/skills/chart-visualization/scripts/: render.py
cognition/runtime/skills/data-analysis/: SKILL.md
cognition/runtime/skills/data-analysis/scripts/: analyze.py
cognition/runtime/skills/frontend-design/: SKILL.md
cognition/runtime/skills/frontend-design/scripts/: render_page.py
cognition/runtime/skills/github-deep-research/: SKILL.md
cognition/runtime/skills/image-style-library/: SKILL.md
cognition/runtime/skills/ppt-generation/: SKILL.md
cognition/tests/: test_approval.py  test_attachment_ingest.py  test_attachments.py  test_calculator.py  test_doc_parsing.py  test_fake_image_gen.py  test_fork_seed.py  test_gap_features.py  test_gap_tools.py  test_grpc_health.py  test_history_policy.py  test_history_repair.py  test_image_generate.py  test_ingest_document_rpc.py  test_knowledge_search_tool.py  test_langfuse_seam.py  test_mapper.py  test_mcp_config.py  test_mcp_naming.py  test_mcp_registry_fake.py  test_mcp_serial.py  test_mode_routing.py  test_model_fallback.py  test_otel_seam.py  test_output_format.py  test_plan_branch_events.py  test_plan_continuation.py  test_plan_lifecycle.py  test_plan_routing.py  test_rag_chunking.py  test_rag_citation.py  test_rag_expand.py  test_rag_fake_embedder.py  test_rag_fusion.py  test_rag_graph_fake.py  test_rag_ingest_idempotent.py  test_rag_reflect.py  test_rag_rerank.py  test_rag_retriever.py  test_rag_store_memory.py  (+18 more)
control-plane/: go.mod  go.sum
deploy/: .env.example  (+4 more)
(+255 files in other folders)
